; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scif_sas_controller.c_scif_sas_controller_clear_affiliation.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scif_sas_controller.c_scif_sas_controller_clear_affiliation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32* }

@SCIF_LOG_OBJECT_CONTROLLER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"scif_sas_controller_clear_affiliation(0x%x) enter\0A\00", align 1
@SCI_MAX_DOMAINS = common dso_local global i64 0, align 8
@SCI_WARNING_SEQUENCE_INCOMPLETE = common dso_local global i32 0, align 4
@SCI_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @scif_sas_controller_clear_affiliation(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %7 = call i32 @sci_base_object_get_logger(%struct.TYPE_5__* %6)
  %8 = load i32, i32* @SCIF_LOG_OBJECT_CONTROLLER, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = ptrtoint %struct.TYPE_5__* %9 to i32
  %11 = call i32 @SCIF_LOG_TRACE(i32 %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @SCI_MAX_DOMAINS, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %29

18:                                               ; preds = %1
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = load i64, i64* %3, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  store i32* %23, i32** %5, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @scif_sas_domain_cancel_smp_activities(i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @scif_sas_domain_start_clear_affiliation(i32* %26)
  %28 = load i32, i32* @SCI_WARNING_SEQUENCE_INCOMPLETE, align 4
  store i32 %28, i32* %4, align 4
  br label %33

29:                                               ; preds = %1
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %31 = call i32 @scif_sas_controller_continue_to_stop(%struct.TYPE_5__* %30)
  %32 = load i32, i32* @SCI_SUCCESS, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %29, %18
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @SCIF_LOG_TRACE(i32) #1

declare dso_local i32 @sci_base_object_get_logger(%struct.TYPE_5__*) #1

declare dso_local i32 @scif_sas_domain_cancel_smp_activities(i32*) #1

declare dso_local i32 @scif_sas_domain_start_clear_affiliation(i32*) #1

declare dso_local i32 @scif_sas_controller_continue_to_stop(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
